[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "json_redactor"
version = "0.0.2"
description = "Redacts content in a json file"
dependencies = [
  "typer>=0.12.3",
  "ijson",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
json_redactor = "json_redactor.cli:app"
